src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__library_ui_tests__tests__snapshot_tests__edit_movie_ui_renders_edit_movie_modal.snap
---
source: src/ui/radarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title ▼                                      Year   Studio              Runtime   Rating     Language   Size       Quality Profile  Monitored  Tags               
=> Test                                         2023   21st Century Alex   2h 0m     R          English    3.30 GB    HD - 1080p       🏷          alex               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                 ╭─────────────────────────────────────────  Edit - Test  ─────────────────────────────────────────╮                                 
                                 │                                         Blah blah blah                                          │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                               ╭───╮                                             │                                 
                                 │                                    Monitored: │ ✔ │                                             │                                 
                                 │                                               ╰───╯                                             │                                 
                                 │                                               ╭────────────────────────────────────────────╮    │                                 
                                 │                         Minimum Availability: │Announced                                 ▼ │    │                                 
                                 │                                               ╰────────────────────────────────────────────╯    │                                 
                                 │                                               ╭────────────────────────────────────────────╮    │                                 
                                 │                              Quality Profile: │HD - 1080p                                ▼ │    │                                 
                                 │                                               ╰────────────────────────────────────────────╯    │                                 
                                 │                                               ╭────────────────────────────────────────────╮    │                                 
                                 │                                         Path: │/nfs/movies                                 │    │                                 
                                 │                                               ╰────────────────────────────────────────────╯    │                                 
                                 │                                               ╭────────────────────────────────────────────╮    │                                 
                                 │                                         Tags: │alex                                        │    │                                 
                                 │                                               ╰────────────────────────────────────────────╯    │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│                                 
                                 ││                     Save                      ││                    Cancel                    ││                                 
                                 │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│                                 
                                 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
