src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__library_ui_tests__tests__snapshot_tests__library_tab_UpdateAllMoviesPrompt.snap
---
source: src/ui/radarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title ▼                                      Year   Studio              Runtime   Rating     Language   Size       Quality Profile  Monitored  Tags               
=> Test                                         2023   21st Century Alex   2h 0m     R          English    3.30 GB    HD - 1080p       🏷          alex               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭───────────────────  Update All Movies  ───────────────────╮                                                     
                                                   │ Do you want to update info and scan your disks for all of │                                                     
                                                   │                       your movies?                        │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
